# teacher-agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py  settings.py
app/agents/: __init__.py  assessment.py  base.py  curriculum.py  prompt_loader.py  safety.py  solver.py  speech.py  summarizer.py  translator.py  tutor.py  visualization.py
app/agents/prompts/: __init__.py  assessment.md  curriculum.md  safety.md  solver.md  speech.md  summarizer.md  translator_math.md  translator_prose.md  tutor.md  visualization.md
app/api/: admin.py  auth.py  deps.py  metrics.py  middleware.py  parent.py  progress.py  routes.py  schemas.py  ws.py
app/core/: __init__.py  bootstrap.py  context_vars.py  exceptions.py  logging.py  metrics.py  resilience.py  security.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  content.py  progress.py  user.py
app/graph/: __init__.py  graph.py  nodes.py  state.py
app/learning/: __init__.py  bkt.py  spaced_repetition.py
app/scripts/: seed.py
app/services/: __init__.py
app/services/cas/: __init__.py  sympy_cas.py
app/services/context/: __init__.py  redis_context.py
app/services/stt/: __init__.py  base.py  google.py
app/services/tts/: __init__.py  azure_tts.py  base.py  elevenlabs_tts.py  google_tts.py  openai_tts.py
app/viz/: __init__.py  schema.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  RouteGuards.jsx  index.css
frontend/src/admin/: AdminLayout.jsx  CrudTable.jsx  pages.jsx
frontend/src/auth/: ChildPicker.jsx  Login.jsx  ParentSignup.jsx
frontend/src/chat/: VoiceChat.jsx
frontend/src/lib/: api.js  store.js  ws.js
frontend/src/parent/: Dashboard.jsx
frontend/src/viz/: VisualizationRenderer.jsx
frontend/src/viz/renderers/: AnimationTimeline.jsx  BarChart.jsx  EquationSteps.jsx  FractionPie.jsx  FunctionPlot.jsx  Geometry.jsx  NumberLine.jsx
scripts/: check.sh
tests/: conftest.py
tests/integration/: test_api_routes.py  test_graph_flow.py
tests/unit/: test_bkt.py  test_cas.py  test_resilience.py  test_security.py  test_settings.py  test_translator.py  test_tts_split.py  test_viz_schema.py
vars/: .env.example
