[project]
name = "teacher-agents"
version = "0.1.0"
description = "Voice-first multi-agent Armenian-language math tutor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic-ai-slim[openai,google,anthropic]>=0.0.14",
    "pydantic-graph>=0.0.14",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "redis[hiredis]>=5.2",
    "google-cloud-speech>=2.28",
    "openai>=1.55",
    "sympy>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "prometheus-client>=0.21",
    "python-ulid>=3.0",
    "email-validator>=2.2",
    "websockets>=14.1",
]

[project.optional-dependencies]
azure = ["azure-cognitiveservices-speech>=1.41"]
elevenlabs = ["elevenlabs>=1.50"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "types-passlib",
    "types-python-jose",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic/versions", "frontend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit (security)
    "SIM", # flake8-simplify
    "RUF",
]
ignore = [
    "S101",   # asserts ok in tests
    "B008",   # FastAPI Depends in defaults
    "S105",   # hardcoded password strings (we use env)
    "S106",   # ditto
    "UP042",  # str+Enum mix-in is intentional for SQLAlchemy compat
    "UP047",  # PEP 695 type parameters; we still use TypeVars
    "RUF002", # en-dash in docstrings is fine
    "RUF003", # comment unicode is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N", "E501", "RUF001", "ARG001", "ARG002"]
"alembic/env.py" = ["E402"]
# Armenian characters are intentional in TTS clause splitting and tutor fallbacks.
"app/services/tts/__init__.py" = ["RUF001", "RUF002", "RUF003"]
"app/graph/nodes.py" = ["RUF001", "RUF002", "RUF003"]
"app/learning/spaced_repetition.py" = ["RUF001", "RUF002", "RUF003"]
"app/agents/prompts/*.md" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
exclude = ["alembic/versions/", "frontend/", "\\.venv/"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Pragmatic strictness — pydantic-ai's Literal-typed model names make full
# `strict` mode noisy without catching real bugs.
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false
disallow_untyped_decorators = false
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["app.agents.*", "app.graph.*", "app.api.ws", "app.api.parent", "app.api.admin"]
disable_error_code = ["call-overload", "type-arg", "no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["app.services.tts.google_tts", "app.services.stt.*"]
disable_error_code = ["attr-defined", "no-any-return"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/**/__init__.py"]
